removing absolute routes
